kube.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <namespace>
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: <namespace>
  labels:
    app: front-end
spec:
  selector:
    matchLabels:
      app: front-end
  replicas: 2
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: <container-name>
        image: <imageid>
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "1000Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end
  namespace: <namespace>
  labels:
    app: back-end
spec:
  selector:
    matchLabels:
      app: back-end
  replicas: 2
  template:
    metadata:
      labels:
        app: back-end
    spec:
      containers:
      - name: <container-name>
        image: <image-id>
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "1000Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: <namespace>
  name: front-end
  labels:
    app: front-end
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: front-end
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: <namespace>
  name: back-end
  labels:
    app: back-end
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: back-end
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <nameofingress>
  namespace: <namespace>
  labels:
    app: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-end
                port:
                  number: 80                        
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
